cmake_minimum_required(VERSION 3.21)
project(3_FinalDomain314)

set(CMAKE_CXX_STANDARD 17)

add_executable(3_FinalDomain314 FinalDomain314/main.cpp FinalDomain314/Skill.cpp FinalDomain314/Skill.hpp FinalDomain314/Spelltree.cpp FinalDomain314/Spelltree.hpp FinalDomain314/Entity.cpp FinalDomain314/Entity.hpp FinalDomain314/Player.cpp FinalDomain314/Player.hpp FinalDomain314/Item.cpp FinalDomain314/Item.hpp FinalDomain314/Spell.cpp FinalDomain314/Spell.hpp Domain/globals.hpp FinalDomain314/Team.cpp FinalDomain314/Team.hpp FinalDomain314/Game.cpp FinalDomain314/Game.hpp FinalDomain314/TurnEngine.cpp FinalDomain314/TurnEngine.hpp FinalDomain314/Dictionary.cpp FinalDomain314/Dictionary.h Domain/Input.cpp Domain/Input.hpp FinalDomain314/Display.cpp FinalDomain314/Display.hpp FinalDomain314/Intro.cpp FinalDomain314/Intro.hpp)
